--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,30 +1,45 @@
+@charset "UTF-8";
 
-body {
-    
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+body, html {
+    height: 100vh;
+    width: 100vw;
     background-image: url('../imagens/fundo-madeira.jpg');
-    background-position: bottom center;
-    background-size: 100% 100%;
+    background-position: top center;
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     position: relative;
-    
+
 }
 
 .iphone {
-    background-image: url('../imagens/frame-iphone.png');
-    width: 311px;
-    height: 627px;
-    margin: auto;
-    background-position: center center;
     position: absolute;
-    background-size: 100% 100%;
-    left: 50%;
     top: 50%;
-    transform: translate(-50%, 5%);
-    
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    height: 627px;
+    width: 311px;
+    background: url('../imagens/frame-iphone.png') no-repeat;
+
+
 }
 
-iframe {
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 269px;
+    height: 471px;
+
+}
+
+/* iframe {
     width: 268px;
     height: 475px;
     margin: auto;
@@ -33,17 +48,17 @@ iframe {
     background-size: cover;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, 23%);
+    transform: translate(-50%, -50%);
 
-}
+} */
 
 
 .icones {
     text-decoration: none;
     list-style: none;
     position: absolute;
-    left: 90%;
-    top: 50%;
+    left: 93%;
+    top: 5%;
 
 }
 
